[gd_scene format=3 uid="uid://cud5pvlhs1u4i"]

[ext_resource type="PackedScene" uid="uid://dh5gd74x07ejl" path="res://Assets/Meshes/robot_bee_tree.glb" id="1_3trws"]
[ext_resource type="Script" uid="uid://b1exdpcn36b2m" path="res://Scripts/enemies/robot_bee_tree.gd" id="1_5thfo"]
[ext_resource type="Shader" uid="uid://co2jw3fnyc6aa" path="res://Shaders/tree_leaves.gdshader" id="2_5thfo"]
[ext_resource type="Texture2D" uid="uid://3cj462y71s5w" path="res://Assets/Textures/leaf_alpha.png" id="3_1hmj6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5tqkl"]
render_priority = 0
shader = ExtResource("2_5thfo")
shader_parameter/color = Color(0.23263368, 0.5039919, 0.27835196, 1)
shader_parameter/alpha = ExtResource("3_1hmj6")
shader_parameter/leaves_scale = 1.0
shader_parameter/leaf_bend_amount = 0.7
shader_parameter/light_steps = 5.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1hmj6"]
height = 3.0
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_5tqkl"]
radius = 5.445

[node name="robot_bee_tree" type="Node3D" unique_id=775793621]
script = ExtResource("1_5thfo")

[node name="robot_bee_tree" parent="." unique_id=155306114 instance=ExtResource("1_3trws")]

[node name="leaves_001" parent="robot_bee_tree" index="1" unique_id=2114743929]
surface_material_override/0 = SubResource("ShaderMaterial_5tqkl")

[node name="StaticBody3D" type="StaticBody3D" parent="." unique_id=1362476539 groups=["trees"]]
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" unique_id=1209972496]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3508902, 0)
shape = SubResource("CylinderShape3D_1hmj6")

[node name="Area3D" type="Area3D" parent="." unique_id=1544961054]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=395659933]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3508902, 0)
shape = SubResource("SphereShape3D_5tqkl")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]

[editable path="robot_bee_tree"]
